Details
-
Bug
-
Status: Closed
-
Blocker
-
Resolution: Fixed
-
Impala 2.11.0, Impala 2.12.0
-
ghx-label-4
Description
https://jenkins.impala.io/job/ubuntu-16.04-from-scratch/461/consoleText
TestRuntimeFilters.test_basic_filters[exec_option: {'batch_size': 0, 'num_nodes': 0, 'disable_codegen_rows_threshold': 0, 'disable_codegen': False, 'abort_on_error': 1, 'exec_single_node_rows_threshold': 0} | table_format: avro/snap/block] [gw1] linux2 -- Python 2.7.12 /home/ubuntu/Impala/bin/../infra/python/env/bin/python query_test/test_runtime_filters.py:39: in test_basic_filters self.run_test_case('QueryTest/runtime_filters', vector) common/impala_test_suite.py:431: in run_test_case verify_runtime_profile(test_section['RUNTIME_PROFILE'], result.runtime_profile) common/test_result_verifier.py:560: in verify_runtime_profile actual)) E AssertionError: Did not find matches for lines in runtime profile: E EXPECTED LINES: E row_regex: .*1 of 1 Runtime Filter Published.* E E ACTUAL PROFILE:
Attachments
Issue Links
- relates to
-
IMPALA-6201 TestRuntimeFilters.test_basic_filters fails on ASAN
- Resolved